src/main/java/com/example/demo/error/ServiceError.java
package com.example.demo.error;

public interface ServiceError {
    String getMessage();
    Integer getCode();
}
